fix: improve contrast of comments in code blocks

--- a/assets/css/highlight.css
+++ b/assets/css/highlight.css
@@ -1,21 +1,21 @@
 .highlight .hll { background-color: #ffffcc }
 .highlight { background: #ffffff; }
-.highlight .c { color: #888888 } /* Comment */
+.highlight .c { color: #57575c } /* Comment */
 .highlight .err { color: #FF0000; background-color: #FFAAAA } /* Error */
 .highlight .k { color: #007d51; font-weight: bold } /* Keyword */
 .highlight .o { color: #333333 } /* Operator */
-.highlight .ch { color: #888888 } /* Comment.Hashbang */
-.highlight .cm { color: #888888 } /* Comment.Multiline */
+.highlight .ch { color: #57575c } /* Comment.Hashbang */
+.highlight .cm { color: #57575c } /* Comment.Multiline */
 .highlight .cp { color: #557799 } /* Comment.Preproc */
-.highlight .cpf { color: #888888 } /* Comment.PreprocFile */
-.highlight .c1 { color: #888888 } /* Comment.Single */
+.highlight .cpf { color: #57575c } /* Comment.PreprocFile */
+.highlight .c1 { color: #57575c } /* Comment.Single */
 .highlight .cs { color: #cc0000; font-weight: bold } /* Comment.Special */
 .highlight .gd { color: #A00000 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #FF0000 } /* Generic.Error */
 .highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
 .highlight .gi { color: #007d51 } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
+.highlight .go { color: #57575c } /* Generic.Output */
 .highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
